--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
-pandas==1.0.3
-pdftotext==2.1.4
-dataclasses==0.7
-pytest==5.4.3
+attrs==20.1.0
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.0.4
+importlib-metadata==1.7.0
+iniconfig==1.0.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+more-itertools==8.4.0
+numpy==1.19.1
+packaging==20.4
+pandas==1.1.1
+pdftotext==2.1.5
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.0.1
+python-dateutil==2.8.1
+pytz==2020.1
+six==1.15.0
+toml==0.10.1
+Werkzeug==1.0.1
+zipp==3.1.0
